js262/test/language/expressions/object/method-definition/early-errors-object-method-body-contains-super-call.js


/*---
author: Brian Terlson <brian.terlson@microsoft.com>
esid: pending
description: It is a SyntaxError if AsyncFunctionBody contains SuperCall is true
negative:
  phase: parse
  type: SyntaxError
features: [async-functions]
---*/

$DONOTEVALUATE();
({
  async foo () { super() }
})
